UPDATE projects content

--- a/index.html
+++ b/index.html
@@ -272,9 +272,6 @@
                             Le but était de réaliser un jeu en ligne sur Android basé sur la localisation de l'utilisateur. 
                             Dans ce jeu, on incarne un chercheur de trésors qui peut creuser un trou là où il se trouve et, selon notre chance, il est possible de déterrer des minéraux, voire des artefacts anciens et précieux.
                         </p>
-                        <p>
-                            Après avoir accumulé des ressources, il est possible de les utiliser pour améliorer ses outils ou bien les vendre aux autres joueurs sur le marché.
-                        </p>
                     </div>
                     <div class="project_more">
                         <a href="motherload.html">Voir plus</a>
@@ -301,10 +298,8 @@
                             Application mobile multiplateforme réalisée lors de ma 1<sup>re</sup> année de Master informatique.
                         </p>
                         <p>
-                            Cette application permet de consulter les différents évènements prévus pour les Journées Portes Ouvertes de l'Université d'Orléans.
-                            Il est possible de visualiser les évènements sur une carte et être alerté (par notification) avant qu'ils ne commencent (en les ajoutant en favoris).
-                            
-                           
+                            Cette application permet de consulter les différents événements prévus pour les Journées Portes Ouvertes de l'Université d'Orléans.
+                            Il est possible de visualiser ces événements sur une carte et les ajouter en favoris pour ainsi être alerté par notification avant qu'ils ne commencent.
                         </p>
                     </div>
                     <div class="project_more">
@@ -364,7 +359,11 @@
                             Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master informatique.
                         </p>
                         <p>
-                            Le but était de réaliser un jeu de cartes (Petit ou Grand) en utilisant l'API OpenGL ES Application.
+                            Le but était de concevoir le jeu "Petit ou Grand" en utilisant l'API OpenGL ES.
+                            Ce jeu de cartes repose sur un système de pari entre deux joueurs où chacun dispose d'une pile de carte.
+                            Le joueur qui joue doit déterminer si la carte qu'il va piocher est supérieure, inférieure ou égale à la carte actuellement retournée
+                            S'il trouve alors il peut continuer à jouer en fonction de la dernière carte trouvée, sinon il doit passer la main. 
+                            Le premier joueur qui vide sa pile de cartes gagne.
                         </p>
                     </div>
                     <div class="project_more">
@@ -392,8 +391,9 @@
                             Application mobile Android réalisée lors de ma 3<sup>e</sup> année de Licence informatique.
                         </p>
                         <p>
-                            Le principe du jeu est de clicker sur une image de cookie afin d'augmenter son score.
-                            Une fois que votre score atteint un certain niveau, vous pouvez alors débloquer de nouvelles améliorations pour faire grimper vos cookies!
+                            Le principe du jeu est d'appuyer sur le cookie afin d'augmenter son score.
+                            Une fois que atteignez un certain score, vous pouvez alors débloquer de nouvelles améliorations pour faire grimper votre nombre de cookies.
+                            Le but étant d'avoir plus de cookies que vos amis!
                         </p>
                     </div>
                     <div class="project_more">
@@ -409,7 +409,7 @@
                             <img src="annexes/icons/icon_tictactoe.png" draggable="false">
                         </div>
                         <div class="project_details">
-                            <h3><strong>TicTacToe</strong></h3>
+                            <h3><strong>TicTacToe (en cours)</strong></h3>
                             <div class="project_label">
                                 <span>Android</span>
                                 <span>Java / Kotlin</span>
@@ -422,6 +422,7 @@
                         </p>
                         <p>
                             Cette application reprend le jeu du morpion.
+                            Il est possible d'affronter vos amis sur votre téléphone mais si vous êtes seul vous pouvez alors vous mesurer face à l'ordinateur (qui repose sur un algorithme d'Intelligence Artificielle).
                         </p>
                     </div>
                     <div class="project_more">
