--- a/jpo_orleans.html
+++ b/jpo_orleans.html
@@ -56,13 +56,12 @@
             <div class="project_content_smartphone_text">
                 <h2>Contexte</h2>
                 <p>
-                    Ce projet a été réalisé lors de ma 1<sup>re</sup> année de Master Informatique dans le module des projets TER.
-                    Il nous a été demandé de réaliser une application de planification d'événements pour les Journées Portes ouvertes.
+                    Ce projet a été réalisé lors de ma 1<sup>re</sup> année de Master Informatique dans le module des projets TER (Travaux d'Etudes et de Recherche).
+                    Il nous a été demandé de réaliser une application de planification d'événements pour les Journées Portes ouvertes de l'université d'Orléans.
                     <br>
-                    Les fonctionnalités attendues sont la gestion des horaires des présentations, la
-                    localisation des stands, des notifications pour les visiteurs sur les événements à venir et un 
-                    système de cartographie pour faciliter la navigation dans le lieu de l'événement. Les visiteurs 
-                    peuvent ainsi personnaliser leur itinéraire et recevoir des alertes en temps réel pour ne rien manquer.
+                    Parmi les fonctionnalités attendues, il y avait la gestion des horaires des présentations, la
+                    localisation des stands, des notifications pour recevoir des alertes en temps réel et un 
+                    système de cartographie pour faciliter la navigation dans le lieu de l'événement.
                 </p>
 
                 <h2>Objectifs</h2>
@@ -71,7 +70,7 @@
                     <br>
                     Nous avions à notre disposition les maquettes de l'ancienne application (réalisée avec Angular et Ionic) ainsi que le fichier qui contenait toutes les données de l'année passée (événements, horaires, lieux...) en format JSON.
                     <br>
-                    A partir de ces informations, nous avons pu créer des maquettes sur Figma et ainsi développer une interface intuitive et ergonomique.
+                    A partir de ces informations, nous avons pu créer des maquettes sur Figma et ainsi développer une interface intuitive et ergonomique avec Flutter.
                 </p>
 
                 <h2>Bilan</h2>
