--- a/motherload.html
+++ b/motherload.html
@@ -61,7 +61,7 @@
                     Cette application est un mini-jeu qui nécessite la géolocalisation du téléphone et un accès internet.
                     Si l'utilisateur se trouve dans le campus de l'Université d'Orléans, il peut creuser pour espérer trouver des objets.
                     Avec ces objets il peut améliorer la qualité de ses outils pour creuser encore plus profond.
-                    Lorsqu'il a amassé assez d'objets rares, il peut les mettre en vente dans le magasin afin que les autres joueurs puisse les acheter.
+                    Lorsqu'il a amassé assez d'objets rares, il peut les mettre en vente dans le magasin afin que les autres joueurs puissent les acheter.
                     Il est aussi possible d'observer les autres joueurs à l'aide d'une carte qui affiche la position des joueurs en temps réel.
                 </p>
 
@@ -71,15 +71,15 @@
                     <br>
                     L'objectif du projet était d'envoyer les données aux différents web services (ex : coordonnées GPS pour creuser) et attendre la réponse du serveur (objet trouvé ou non trouvé).
                     Nous devions ensuite développer une application agréable à utiliser pour jouer au jeu.
-                    <br>
-                    Utilisation du langage de programmation pour Android : Kotlin.
                 </p>
 
                 <h2>Bilan</h2>
                 <p>
-                    Après le projet j'ai eu l'idée d'ajouter quelques fonctionnalités que je n'avais pas eu le temps de développer au cours du projet.
-                    Le professeur m'a donc partagé le code de son serveur et des différents web services pour que je puisse l'héberger moi-même et ainsi continuer de faire fonctionner le jeu.
-                    J'en ai aussi profité pour corriger quelques erreurs et ajouter de nouvelles fonctionnalités comme l'ajout d'un avatar pour mieux identifier les joueurs sur la carte.
+                    Après le projet j'ai demandé à l'enseignant s'il pouvait me mettre à disposition le code de son serveur et des différents web services pour que je puisse l'héberger moi-même et ainsi continuer de faire fonctionner le jeu.
+                    <br>
+                    J'ai aussi eu plusieurs idées d'améliorations à la suite du projet.
+                    Sur mon temps libre, j'ai alors corrigé quelques erreurs provenant du serveur et j'ai développé de nouvelles fonctionnalités.
+                    Par exemple, l'ajout d'un avatar pour mieux identifier les joueurs sur la carte.
                 </p>
             </div>
         </div>
