--- a/petit_ou_grand.html
+++ b/petit_ou_grand.html
@@ -55,23 +55,25 @@
             </div>
             <div class="project_content_smartphone_text">
                 <h2>Contexte</h2>
-                <p>
+                <!--<p>
                     Ce projet a été réalisé durant ma 1<sup>re</sup> année de Master Informatique dans le cadre du cours de Programmation Graphique.
-                Le projet consistait à réaliser un jeu en sur mobile en utilisant le langage Java et OpenGL ES.
-                </p>
+                    Le projet consistait à réaliser un jeu en sur mobile en utilisant le langage Java et OpenGL ES.
+                </p>-->
+                <p>Todo</p>
 
                 <h2>Objectifs</h2>
-                <p>
+                <!--<p>
                     Le jeu se basse sur un système de pari entre deux joueurs.
                     Chaque joueur doit deviner si la carte qu'il va retourner de sa pile est plus grande, plus petite ou égale à la dernière carte retournée.
                     S'il devine correctement alors il peut continuer à jouer
                     Le premier joueur qui arriver à vider sa pile de cartes à deviner gagne.
                     Les boutons pour parier ainsi que les cartes ont été développés en OpenGL.
-                </p>
+                </p>-->
+                <p>Todo</p>
 
                 <h2>Bilan</h2>
                 <p>
-                    ...
+                    Todo
                 </p>
             </div>
         </div>
