--- a/tictactoe.html
+++ b/tictactoe.html
@@ -55,19 +55,21 @@
             </div>
             <div class="project_content_smartphone_text">
                 <h2>Contexte</h2>
-                <p>
+                <!--<p>
                     J'ai réalisé ce projet sur mon temps libre.
-                </p>
+                </p>-->
+                <p>Todo</p>
 
                 <h2>Objectifs</h2>
-                <p>
+                <!--<p>
                     Mettre en place le jeu du morpion sur téléphone Android.
                     Algo vu en IA (min-max)
-                </p>
+                </p>-->
+                <p>Todo</p>
 
                 <h2>Bilan</h2>
                 <p>
-                    ...
+                    Todo
                 </p>
             </div>
         </div>
