--- a/todolist.html
+++ b/todolist.html
@@ -62,16 +62,14 @@
 
                 <h2>Objectifs</h2>
                 <p>
-                    Chaque tâche est identifiée à l'aide d'un titre.
-
-                    L'application devait permettre à l'utilisateur de rentrer un intitulé de tâche. 
-                    Il a aussi la possibilité de choisir une date, ajouter une description et un lieu.
-                    Il fallait aussi prévoir la modification et la suppression de la tâche.
-                    Chaque tâche peut être définie comme prioritaire.
-                    Supprimer la tâche par glissement ou en cliquant sur le bouton
-                    Adresse = météo mais aussi carte
-                    Il est aussi possible de trier les tâches selon leur importance (prioritaire ou non), la date d'échéance de la tâche ou la date de création de la tâche.
-                    Dans les contraintes du projet, il était aussi demandé d'afficher la météo liée au lieu entré par l'utilisateur à l'aide d'une API : OpenWeatherMap.
+                    L'application doit permettre à l'utilisateur de créer une tâche à partir d'un titre. Il a aussi la possibilité de choisir une date, ajouter une description et un lieu.
+                    <br>
+                    Une fois la tâche créée, elle s'ajoute à la liste des tâches. L'utilisateur peut alors modifier ou supprimer les tâches de son choix.
+                    De plus, lorsqu'un lieu a été défini pour la tâche, on affiche ce dernier sur une carte ainsi que la météo en utilisant l'API OpenWeatherMap.
+                    <br>
+                    Dans les fonctionnalités, il y a aussi la possibilité de définir une tâche prioritaire ou bien de la marquer comme terminée.
+                    
+                    Dans les paramètres de l'application, il est possible de changer la langue, le thème et le tri de la liste des tâches.
                     L'utilisateur peut aussi choisir s'il veut ou non afficher les tâches terminées
                 </p>
 
