ADD projects demo popup

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <h1>Projets</h1>
 
         <div class="projects_list">
-            <div class="project_container">
+            <div id="#project_motherload" class="project_container">
                 <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
@@ -275,13 +275,30 @@
                             Dans ce jeu, on incarne un chercheur de trésors qui peut creuser un trou là où il se trouve et, selon notre chance, il est possible de déterrer des minéraux, voire des artefacts anciens et précieux.
                         </p>
                     </div>
-                    <div class="project_more">
-                        <a href="motherload.html">Voir plus</a>
+                    <div class="project_more box">
+                        <!--<a href="motherload.html">Voir plus</a>-->
+                        <a href="#motherload">Demo</a>
+                    </div>
+                    <div id="motherload" class="overlay">
+                        <div class="popup">
+                            <a class="close" href="#project_motherload">&times;</a>
+                            <div class="content">
+                                <div class="smartphone_container">
+                                    <div class="smartphone">
+                                        <div class="content">
+                                            <video controls loop autoplay muted width="300px" height="550px">
+                                                <source src="annexes/records/motherload_recording.mp4" type="video/mp4" />
+                                            </video>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="project_container">
+            <div id="project_jpo" class="project_container">
                 <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
@@ -304,13 +321,30 @@
                             Il est possible de visualiser ces événements sur une carte et les ajouter en favoris pour ainsi être alerté par notification avant qu'ils ne commencent.
                         </p>
                     </div>
-                    <div class="project_more">
-                        <a href="jpo_orleans.html">Voir plus</a>
+                    <div class="project_more box">
+                        <!--<a href="motherload.html">Voir plus</a>-->
+                        <a href="#jpo">Demo</a>
+                    </div>
+                    <div id="jpo" class="overlay">
+                        <div class="popup">
+                            <a class="close" href="#project_jpo">&times;</a>
+                            <div class="content">
+                                <div class="smartphone_container">
+                                    <div class="smartphone">
+                                        <div class="content">
+                                            <video controls loop autoplay muted width="300px" height="550px">
+                                                <source src="annexes/records/jpo_recording.mp4" type="video/mp4" />
+                                            </video>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="project_container">
+            <div id="project_todolist" class="project_container">
                 <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
@@ -335,13 +369,30 @@
                             On a alors la possibilité de voir le lieu sur une carte ainsi que la météo actuelle.
                         </p>
                     </div>
-                    <div class="project_more">
-                        <a href="todolist.html">Voir plus</a>
+                    <div class="project_more box">
+                        <!--<a href="motherload.html">Voir plus</a>-->
+                        <a href="#todolist">Demo</a>
+                    </div>
+                    <div id="todolist" class="overlay">
+                        <div class="popup">
+                            <a class="close" href="#project_todolist">&times;</a>
+                            <div class="content">
+                                <div class="smartphone_container">
+                                    <div class="smartphone">
+                                        <div class="content">
+                                            <video controls loop autoplay muted width="300px" height="550px">
+                                                <source src="annexes/records/todolist_recording.mp4" type="video/mp4" />
+                                            </video>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div id="hidden_project" class="project_container">
+            <div id="project_petitougrand" class="hidden_project project_container">
                 <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
@@ -368,13 +419,30 @@
                             Le premier joueur qui vide sa pile de cartes gagne.
                         </p>
                     </div>
-                    <div class="project_more">
-                        <a href="petit_ou_grand.html">Voir plus</a>
+                    <div class="project_more box">
+                        <!--<a href="motherload.html">Voir plus</a>-->
+                        <a href="#petitougrand">Demo</a>
+                    </div>
+                    <div id="petitougrand" class="overlay">
+                        <div class="popup">
+                            <a class="close" href="#project_petitougrand">&times;</a>
+                            <div class="content">
+                                <div class="smartphone_container">
+                                    <div class="smartphone">
+                                        <div class="content">
+                                            <video controls loop autoplay muted width="300px" height="550px">
+                                                <source src="annexes/records/petitougrand_recording.mp4" type="video/mp4" />
+                                            </video>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div id="hidden_project" class="project_container">
+            <div id="project_cookie" class="hidden_project project_container">
                 <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
@@ -398,13 +466,30 @@
                             Le but étant d'avoir plus de cookies que vos amis!
                         </p>
                     </div>
-                    <div class="project_more">
-                        <a href="cookie_clicker.html">Voir plus</a>
+                    <div class="project_more box">
+                        <!--<a href="motherload.html">Voir plus</a>-->
+                        <a href="#cookie">Demo</a>
+                    </div>
+                    <div id="cookie" class="overlay">
+                        <div class="popup">
+                            <a class="close" href="#project_cookie">&times;</a>
+                            <div class="content">
+                                <div class="smartphone_container">
+                                    <div class="smartphone">
+                                        <div class="content">
+                                            <video controls loop autoplay muted width="300px" height="550px">
+                                                <source src="annexes/records/cookie_recording.mp4" type="video/mp4" />
+                                            </video>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div id="hidden_project" class="project_container">
+            <div id="project_tictactoe" class="hidden_project project_container">
                 <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
@@ -427,8 +512,25 @@
                             Il est possible d'affronter vos amis sur votre téléphone mais si vous êtes seul vous pouvez alors vous mesurer face à l'ordinateur (qui repose sur un algorithme d'Intelligence Artificielle).
                         </p>
                     </div>
-                    <div class="project_more">
-                        <a id="hidden_projects_btn" href="tictactoe.html">Voir plus</a>
+                    <div class="project_more box">
+                        <!--<a href="motherload.html">Voir plus</a>-->
+                        <a href="#tictactoe">Demo</a>
+                    </div>
+                    <div id="tictactoe hidden_project" class="overlay">
+                        <div class="popup">
+                            <a class="close" href="#project_tictactoe">&times;</a>
+                            <div class="content">
+                                <div class="smartphone_container">
+                                    <div class="smartphone">
+                                        <div class="content">
+                                            <video controls loop autoplay muted width="300px" height="550px">
+                                                <source src="annexes/records/cookie_recording.mp4" type="video/mp4" />
+                                            </video>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>    
             </div>
