--- a/index.html
+++ b/index.html
@@ -280,17 +280,13 @@
                         <a href="#motherload">Demo</a>
                     </div>
                     <div id="motherload" class="overlay">
-                        <div class="popup">
-                            <a class="close" href="#project_motherload">&times;</a>
-                            <div class="content">
-                                <div class="smartphone_container">
-                                    <div class="smartphone">
-                                        <div class="content">
-                                            <video controls loop autoplay muted width="300px" height="550px">
-                                                <source src="annexes/records/motherload_recording.mp4" type="video/mp4" />
-                                            </video>
-                                        </div>
-                                    </div>
+                        <a class="close" href="#project_motherload">&times;</a>
+                        <div class="smartphone_container">
+                            <div class="smartphone">
+                                <div class="content">
+                                    <video controls loop autoplay muted width="300px" height="550px">
+                                        <source src="annexes/records/motherload_recording.mp4" type="video/mp4" />
+                                    </video>
                                 </div>
                             </div>
                         </div>
@@ -326,17 +322,13 @@
                         <a href="#jpo">Demo</a>
                     </div>
                     <div id="jpo" class="overlay">
-                        <div class="popup">
-                            <a class="close" href="#project_jpo">&times;</a>
-                            <div class="content">
-                                <div class="smartphone_container">
-                                    <div class="smartphone">
-                                        <div class="content">
-                                            <video controls loop autoplay muted width="300px" height="550px">
-                                                <source src="annexes/records/jpo_recording.mp4" type="video/mp4" />
-                                            </video>
-                                        </div>
-                                    </div>
+                        <a class="close" href="#project_jpo">&times;</a>
+                        <div class="smartphone_container">
+                            <div class="smartphone">
+                                <div class="content">
+                                    <video controls loop autoplay muted width="300px" height="550px">
+                                        <source src="annexes/records/jpo_recording.mp4" type="video/mp4" />
+                                    </video>
                                 </div>
                             </div>
                         </div>
@@ -374,17 +366,13 @@
                         <a href="#todolist">Demo</a>
                     </div>
                     <div id="todolist" class="overlay">
-                        <div class="popup">
-                            <a class="close" href="#project_todolist">&times;</a>
-                            <div class="content">
-                                <div class="smartphone_container">
-                                    <div class="smartphone">
-                                        <div class="content">
-                                            <video controls loop autoplay muted width="300px" height="550px">
-                                                <source src="annexes/records/todolist_recording.mp4" type="video/mp4" />
-                                            </video>
-                                        </div>
-                                    </div>
+                        <a class="close" href="#project_todolist">&times;</a>
+                        <div class="smartphone_container">
+                            <div class="smartphone">
+                                <div class="content">
+                                    <video controls loop autoplay muted width="300px" height="550px">
+                                        <source src="annexes/records/todolist_recording.mp4" type="video/mp4" />
+                                    </video>
                                 </div>
                             </div>
                         </div>
@@ -424,17 +412,13 @@
                         <a href="#petitougrand">Demo</a>
                     </div>
                     <div id="petitougrand" class="overlay">
-                        <div class="popup">
-                            <a class="close" href="#project_petitougrand">&times;</a>
-                            <div class="content">
-                                <div class="smartphone_container">
-                                    <div class="smartphone">
-                                        <div class="content">
-                                            <video controls loop autoplay muted width="300px" height="550px">
-                                                <source src="annexes/records/petitougrand_recording.mp4" type="video/mp4" />
-                                            </video>
-                                        </div>
-                                    </div>
+                        <a class="close" href="#project_petitougrand">&times;</a>
+                        <div class="smartphone_container">
+                            <div class="smartphone">
+                                <div class="content">
+                                    <video controls loop autoplay muted width="300px" height="550px">
+                                        <source src="annexes/records/petitougrand_recording.mp4" type="video/mp4" />
+                                    </video>
                                 </div>
                             </div>
                         </div>
@@ -471,17 +455,13 @@
                         <a href="#cookie">Demo</a>
                     </div>
                     <div id="cookie" class="overlay">
-                        <div class="popup">
-                            <a class="close" href="#project_cookie">&times;</a>
-                            <div class="content">
-                                <div class="smartphone_container">
-                                    <div class="smartphone">
-                                        <div class="content">
-                                            <video controls loop autoplay muted width="300px" height="550px">
-                                                <source src="annexes/records/cookie_recording.mp4" type="video/mp4" />
-                                            </video>
-                                        </div>
-                                    </div>
+                        <a class="close" href="#project_cookie">&times;</a>
+                        <div class="smartphone_container">
+                            <div class="smartphone">
+                                <div class="content">
+                                    <video controls loop autoplay muted width="300px" height="550px">
+                                        <source src="annexes/records/cookie_recording.mp4" type="video/mp4" />
+                                    </video>
                                 </div>
                             </div>
                         </div>
@@ -516,18 +496,14 @@
                         <!--<a href="motherload.html">Voir plus</a>-->
                         <a href="#tictactoe">Demo</a>
                     </div>
-                    <div id="tictactoe hidden_project" class="overlay">
-                        <div class="popup">
-                            <a class="close" href="#project_tictactoe">&times;</a>
-                            <div class="content">
-                                <div class="smartphone_container">
-                                    <div class="smartphone">
-                                        <div class="content">
-                                            <video controls loop autoplay muted width="300px" height="550px">
-                                                <source src="annexes/records/cookie_recording.mp4" type="video/mp4" />
-                                            </video>
-                                        </div>
-                                    </div>
+                    <div id="tictactoe" class="overlay">
+                        <a class="close" href="#project_tictactoe">&times;</a>
+                        <div class="smartphone_container">
+                            <div class="smartphone">
+                                <div class="content">
+                                    <video controls loop autoplay muted width="300px" height="550px">
+                                        <source src="annexes/records/cookie_recording.mp4" type="video/mp4" />
+                                    </video>
                                 </div>
                             </div>
                         </div>
